--- a/index.html
+++ b/index.html
@@ -5,25 +5,22 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <nav id="navbar">
-        <header>JS Documentation</header>
+      <header>JS Documentation</header>
         <ul>
           <li><a class="nav-link" href="#Introduction">Introduction</a></li>
           <li>
             <a class="nav-link" href="#What_you_should_already_know"
-              >What you should already know</a
-            >
+              >What you should already know</a>
           </li>
           <li>
             <a class="nav-link" href="#JavaScript_and_Java"
-              >JavaScript and Java</a
-            >
+              >JavaScript and Java</a>
           </li>
           <li><a class="nav-link" href="#Hello_world">Hello world</a></li>
           <li><a class="nav-link" href="#Variables">Variables</a></li>
           <li>
             <a class="nav-link" href="#Declaring_variables"
-              >Declaring variables</a
-            >
+              >Declaring variables</a>
           </li>
           <li><a class="nav-link" href="#Variable_scope">Variable scope</a></li>
           <li>
@@ -33,8 +30,7 @@
           <li><a class="nav-link" href="#Data_types">Data types</a></li>
           <li>
             <a class="nav-link" href="#if...else_statement"
-              >if...else statement</a
-            >
+              >if...else statement</a>
           </li>
           <li><a class="nav-link" href="#while_statement">while statement</a></li>
           <li>
